--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <p>This is the APK link for my Software Engineering Capstone, eSports Hero and Ability Builder (EHAB) </p>
 
-    <p><a href="https://github.com/yourusername/your-repository/releases/download/v1.0/your-app.apk" download>Download APK</a></p>
+    <p><a href="app-release.apk" download>Download APK</a></p>
 
 </body>
 
