--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <p>This is the APK link for my Software Engineering Capstone, eSports Hero and Ability Builder (EHAB) </p>
 
-    <p><a href="app-release.apk" download>Download APK</a></p>
+    <p><a href="https://github.com/Jugernaut73/Capstone-APK/raw/main/app-release.apk" download>Download APK</a></p>
 
 </body>
 
